--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,17 +13,17 @@ Fonts are separated by a & */
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Ibm Plex Serif";
-  --paragraph-font: IBM Plex Serif, Helvetica, sans-serif;
+  --paragraph-font: IBM Plex Serif, Helvetica, sans-serif; /*this is making sure one of the font is backup
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white:white;  /* headlines on a white background */ 
-  --headline-color-on-color: black; /* headlines on a colored background */ 
-  --paragraph-color-on-white: black; /* paragraph text on a white background */ 
+ /* --headline-color-on-white:rgba(254, 254, 255, 0);  /* headlines on a white background */ 
+  --headline-color-on-color: rgb(252, 252, 253); /* headlines on a colored background */ 
+ /* --paragraph-color-on-white: black; /* paragraph text on a white background */ 
   --paragraph-color-on-color: black; /* paragraph text on a colored background */ 
   --paragraph-background-color: blue;
-  --nav-link-color: black ;
+  --nav-link-color: rgb(3, 3, 3) ;
   --nav-background-color: #7209b7;
-  --nav-hover-link-color: black;
+  --nav-hover-link-color: rgb(252, 4, 252);
   --nav-hover-background-color: #4895ef;
 }
 
@@ -47,27 +47,31 @@ img {
   margin:0 auto;
   max-width:500px;
 }
-h1, h3, h6 {
+h1,h6 {
    font-family: var(--heading-font);
    color: var(--headline-color-on-white);
    letter-spacing:8px;
-   word-spacing:5px
-   white-space=10
+   word-spacing:5px;
+}
+h3{
+  font-family: var(--heading-font);
+  color: var(--headline-color-on-red);
+  letter-spacing:8px;
+  word-spacing:5px;
 }
 h2{
     font-family: var(--heading-font);
     color: var(--headline-color-on-white);
     letter-spacing:5px;
-    word-spacing:11px
-    white-space=10
-    text-align=center;
+    word-spacing:11px;
+    text-align:center;
 }
 h4{
    font-family: var(--heading-font);
    color: var(--headline-color-on-white);
    letter-spacing:4px;
-   word-spacing:5px
-   white-space=10;
+   word-spacing:5px;
+   font-size:larger;
 }
 h5{
    font-family: var(--heading-font);
