--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,7 +21,7 @@ Fonts are separated by a & */
  /* --paragraph-color-on-white: black; /* paragraph text on a white background */ 
   --paragraph-color-on-color: black; /* paragraph text on a colored background */ 
   --paragraph-background-color: blue;
-  --nav-link-color: #fc0744 ;
+  --nav-link-color: #1d050b ;
   --nav-background-color: #7209b7;
   --nav-hover-link-color: rgb(252, 4, 252);
   --nav-hover-background-color: #4895ef;
